Add: Frontend and new endpoint(reset password) added
